--- a/NaflimTools.WPF/NaflimTools.WPF.csproj
+++ b/NaflimTools.WPF/NaflimTools.WPF.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.4.10" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
