feat: 上传程序图标

--- a/NaflimTools.WPF/NaflimTools.WPF.csproj
+++ b/NaflimTools.WPF/NaflimTools.WPF.csproj
@@ -6,10 +6,15 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Resources\Images\Ayano.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Resources\Images\Ayano.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\Images\Ayano.ico" />
   </ItemGroup>
 
   <ItemGroup>
