--- a/NaflimTools.WPF/NaflimTools.WPF.csproj
+++ b/NaflimTools.WPF/NaflimTools.WPF.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
     <PackageReference Include="MahApps.Metro" Version="2.4.10" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.1" />
